--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,5 +5,5 @@ jobs:
       - image: circleci/node:latest
     steps:
       - checkout
-      - run: npm install dredd@5.3.2 --no-optional --global
+      - run: sudo npm install dredd@5.3.2 --no-optional --global
       - run: dredd apiary.apib http://localhost:3000
