--- a/wercker.yml
+++ b/wercker.yml
@@ -3,7 +3,7 @@ build:
   steps:
     - script:
         name: install-dredd
-        code: sudo npm install dredd@5.3.2 --no-optional --global
+        code: sudo npm install dredd@5.3.2 --ignore-scripts --no-optional --global
     - script:
         name: dredd
         code: dredd
