--- a/dredd.yml
+++ b/dredd.yml
@@ -4,7 +4,7 @@ custom:
   apiaryApiName: danjsontestapi
 dry-run: null
 hookfiles: null
-language: !<tag:yaml.org,2002:js/undefined> ''
+language: nodejs
 sandbox: false
 server: node app.js
 server-wait: 3
@@ -31,6 +31,6 @@ hooks-worker-term-timeout: 5000
 hooks-worker-term-retry: 500
 hooks-worker-handler-host: 127.0.0.1
 hooks-worker-handler-port: 61321
-config: ./dredd.yml
+config: dredd.yml
 blueprint: apiary.apib
 endpoint: 'http://localhost:3000'
