--- a/wercker.yml
+++ b/wercker.yml
@@ -2,6 +2,9 @@ box: node
 build:
   steps:
     - script:
+        name: install-expressjs
+        code: sudo npm install express@6.5.0 --ignore-scripts --no-optional --global
+    - script:
         name: install-dredd
         code: sudo npm install dredd@5.3.2 --ignore-scripts --no-optional --global
     - script:
